cmake_minimum_required(VERSION 3.20)

project(corouv_tests
  VERSION 0.1.0
  LANGUAGES C CXX
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(CTest)
enable_testing()

add_subdirectory(.. ${CMAKE_CURRENT_BINARY_DIR}/corouv-core)

function(corouv_add_test target source)
  add_executable(${target} ${source})
  target_link_libraries(${target} PRIVATE corouv::corouv)
  add_test(NAME ${target} COMMAND ${target})
endfunction()

corouv_add_test(corouv_test_timer timer_test.cpp)
corouv_add_test(corouv_test_timeout timeout_test.cpp)
corouv_add_test(corouv_test_blocking blocking_test.cpp)
corouv_add_test(corouv_test_blocking_error blocking_error_test.cpp)
corouv_add_test(corouv_test_cancel cancel_test.cpp)
corouv_add_test(corouv_test_async_mutex async_mutex_test.cpp)
corouv_add_test(corouv_test_async_semaphore async_semaphore_test.cpp)
corouv_add_test(corouv_test_async_queue async_queue_test.cpp)
corouv_add_test(corouv_test_event event_test.cpp)
corouv_add_test(corouv_test_fs fs_test.cpp)
corouv_add_test(corouv_test_io_file io_file_test.cpp)
corouv_add_test(corouv_test_filesystem filesystem_test.cpp)
corouv_add_test(corouv_test_filesystem_watch filesystem_watch_test.cpp)
corouv_add_test(corouv_test_runtime runtime_test.cpp)
corouv_add_test(corouv_test_task_group task_group_test.cpp)
corouv_add_test(corouv_test_net net_test.cpp)
corouv_add_test(corouv_test_udp udp_test.cpp)
corouv_add_test(corouv_test_io_datagram io_datagram_test.cpp)
corouv_add_test(corouv_test_udp_options udp_options_test.cpp)
corouv_add_test(corouv_test_udp_recv_some udp_recv_some_test.cpp)
corouv_add_test(corouv_test_datagram_channel datagram_channel_test.cpp)
corouv_add_test(corouv_test_udp_multicast udp_multicast_test.cpp)
corouv_add_test(corouv_test_http http_test.cpp)
corouv_add_test(corouv_test_http_form http_form_test.cpp)
corouv_add_test(corouv_test_http_stream http_stream_test.cpp)
corouv_add_test(corouv_test_parser_fuzz parser_fuzz_test.cpp)
corouv_add_test(corouv_test_https https_test.cpp)
corouv_add_test(corouv_test_multipart multipart_test.cpp)
corouv_add_test(corouv_test_web_builder web_builder_test.cpp)
corouv_add_test(corouv_test_web_router web_router_test.cpp)
corouv_add_test(corouv_test_sql sql_test.cpp)
corouv_add_test(corouv_test_sql_orm sql_orm_test.cpp)

if (UNIX)
  corouv_add_test(corouv_test_poll poll_test.cpp)
  corouv_add_test(corouv_test_poll_overload poll_overload_test.cpp)
endif()
